<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_margin_top_title"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_screen_title_textsize"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_status_line"
            android:textSize="@dimen/dimen_login_title_statusline_textsize"
            android:layout_marginTop="@dimen/dimen_margin_top_login_statusline"
            android:id="@+id/textViewTitleTagline" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEditFieldsLogin"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:hint="@string/username_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="@dimen/dimen_login_editbox_padding"
            android:background="@drawable/edit_box"/>

        <EditText
            android:hint="@string/password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_margin_top_components"
            android:paddingLeft="@dimen/dimen_login_editbox_padding"
            android:background="@drawable/edit_box"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_margin_top_layout_section3"
        android:layout_below="@+id/linearEditFieldsLogin"
        android:gravity="center"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_login"
            android:clickable="true"
            android:textSize="@dimen/dimen_login_normal_textsize"
            android:id="@+id/textViewLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_create_account"
            android:clickable="true"
            android:textSize="@dimen/dimen_login_normal_textsize"
            android:layout_marginTop="@dimen/dimen_margin_top_textviews"
            android:id="@+id/textViewCreateAccount" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/text_forgot_passowrd"
            android:clickable="true"
            android:textSize="@dimen/dimen_login_normal_textsize"
            android:layout_marginTop="@dimen/dimen_margin_top_textviews"
            android:id="@+id/textViewForgotPassword" />

    </LinearLayout>
</RelativeLayout>