<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/title_bg_white"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textViewTitleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_screen_title_textsize" />

        <TextView
            android:id="@+id/textViewUsernameHeaderRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/text_demo_username"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dimen_login_title_statusline_textsize" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeHeader"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_tab_layout_bottom_padding">

        <Button
            android:id="@+id/buttonActiveTrivia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_active_bg"
            android:text="@string/text_tab_active_trivia"
            android:textAllCaps="false"
            android:textColor="@color/colorTabFont"
            android:textSize="@dimen/dimen_tab_button_textSize" />

        <Button
            android:id="@+id/buttonAllCelebrities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_deactive_bg"
            android:text="@string/text_tab_all_celebrities"
            android:textAllCaps="false"
            android:textColor="@color/colorTabFont"
            android:textSize="@dimen/dimen_tab_button_textSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearActiveTriviaLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearTabLayout"
        android:orientation="vertical"
        android:visibility="visible">

        <ListView
            android:id="@+id/listViewActiveTrivia"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@color/colorPrimary"
            android:dividerHeight="2dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAllCelecbritiesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearTabLayout"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/listViewAllCelebrities"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@color/colorPrimary"
            android:dividerHeight="2dp" />
    </LinearLayout>
</RelativeLayout>